--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=7.0"
     },
-    "license": " Apache-2.0 License",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "sudemqaq",
