添加composer 的版本号

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,6 @@
             "Atonal_OAuth\\": "src/Atonal_OAuth"
         }
     },
-    "minimum-stability": "beta"
+    "minimum-stability": "beta",
+    "version":"1.0"
 }
